Fix missing colours on filled cells

--- a/Games/NoughtsAndCrosses/src/main/resources/static/less/noughts_and_crosses.less
+++ b/Games/NoughtsAndCrosses/src/main/resources/static/less/noughts_and_crosses.less
@@ -31,10 +31,10 @@ div.grid {
 				background-color: #ddd;
 			}
 
-			&[data-status*="⭕"] {
+			&[data-contents*="⭕"] {
 				background-color: #fee;
 			}
-			&[data-status*="✕"] {
+			&[data-contents*="✕"] {
 				background-color: #eef;
 			}
 		}
